<resources>
    <string name="app_name">Final Project</string>




    <!-- House Settings -->
    <string name="appThree">House Settings</string>
    <string name = "garage_light">Garage Light</string>
    <string name = "garagedoor_openner">Garage Door</string>
    <string name = "light_on">On</string>
    <string name = "light_off">off</string>
    <string name = "door_open">Open</string>
    <string name = "door_close">Close</string>
    <string name="currentTempText">Current Temperature</string>
    <string name="minTempText">Minimum Temperature</string>
    <string name="maxTempText">Maximum Temperature</string>
    <string name="messageHere">Temperature Here</string>
    <string name="idHere">ID=</string>
    <string name="deleteThisMessage">DELETE THIS MESSAGE</string>
    <string name="currentTemperature">TextView</string>
    <string name="minimumTemperature">TextView</string>
    <string name="maximumTemperature">TextView</string>



    <!-- kitchen work -->
    <string name="enter_fridge_temperature">Enter Fridge Temperature</string>
    <string name="enter_freezer_temperature">Enter Freezer Temperature</string>
    <string name="submit_freezer_temperature">Submit Freezer Temperature</string>
    <string name="submit_fridge_temperature">Submit Fridge Temperature</string>
    <string name="kitchen_light">kitchen light</string>
    <string name="turn_lights_on_off">Turn light on/off</string>
</resources>
