<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mohibhero.finalproject.WeatherForecast"
    android:weightSum="1"
    android:background="@mipmap/ic_launcher">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/weatherImage"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/weatherImage">
        <TextView
            android:id="@+id/currentTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentTempText"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/minTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minTempText"
            android:layout_below="@+id/currentTempLabel"
            android:layout_alignStart="@+id/currentTempLabel"
            android:layout_marginTop="30dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxTempText"
            android:layout_below="@+id/minTempLabel"
            android:layout_alignStart="@+id/currentTempLabel"
            android:layout_marginTop="30dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/currentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/maximumTemperature"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/minimumTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_below="@+id/currentTemperature"
            android:layout_alignStart="@+id/maximumTemperature"
            android:layout_marginTop="30dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/maximumTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18dp"
            android:layout_alignBaseline="@+id/maxTempLabel"
            android:layout_alignBottom="@+id/maxTempLabel"
            android:layout_toEndOf="@+id/progressWeatherBar"
            android:layout_marginStart="44dp" />

        <ProgressBar
            android:id="@+id/progressWeatherBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="89dp"
            />


    </RelativeLayout>




</RelativeLayout>
